# clrpp

./: .gitmodules  CMakeLists.txt  CppCheckSuppressions.txt  README.md  conanfile.py
.github/workflows/: ci.yaml  coverage.yaml  dynamic-analysis.yaml  static-analysis.yaml
docs/: CMakeLists.txt  NOTES.md
example/: CMakeLists.txt  main.cpp
include/clrpp/: Caller.hpp  MethodRegistry.hpp  clrpp.hpp
src/: CMakeLists.txt  Caller.cpp  ClrMsgs.capnp  clrpp.cpp
src/schema/: rpc.capnp
test_package/: CMakeLists.txt  conanfile.py  example.cpp
tests/: CMakeLists.txt  TestServer.cpp  TestServer.hpp  clrppTests.cpp
